assets/css/style.css
/* ... */
.form-title {
  text-align: center;
  margin-bottom: 20px;

}

form {
  padding: 2.5rem;
  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
  background: #fff;
  box-sizing: border-box;
  border-radius: 10px;
  display:grid
}

.form-group {
    flex-direction: column;
    margin-bottom: 15px;

}

.form-group label {
    margin-bottom: 5px;
    color: #333; 
    text-align: left;
}

form input[type="text"], form input[type="email"], form textarea, form button {
  width: 100%;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
}

form button {
    background-image: linear-gradient(to right, #0b0b0b, #4f4f4f);
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 18px;
    width: 15rem;
    align-self: center;
}

form button:hover {
    background-image: linear-gradient(to right, #949494, #000000);
}

@media only screen and (max-width: 768px) {
    .skills-list {
        flex-direction: column; 
    }
}

@media only screen and (max-width: 480px) {
    header, footer {
        padding: 15px; 
    }

    section, form {
        width: calc(100% - 20px); 
    }

    form{
      box-shadow: none;
    }
  }

